--- a/resources/assets/css/global.css
+++ b/resources/assets/css/global.css
@@ -416,8 +416,7 @@
         border-radius: 100%;
         transition: all 1s ease; }
     .input-wrapper .radio-inline label .text {
-      padding-left: 30px;
-      display: -ms-inline-grid; }
+      padding-left: 30px; }
   .input-wrapper .radio-inline input:checked ~ label .mark {
     border: 1px solid #0263f7; }
     .input-wrapper .radio-inline input:checked ~ label .mark span {
@@ -456,8 +455,7 @@
         border-left: 2px solid #ffffff;
         border-bottom: 2px solid #ffffff; }
     .input-wrapper .checklist-inline label .text {
-      padding-left: 30px;
-      display: inline-grid; }
+      padding-left: 30px; }
   .input-wrapper .checklist-inline input:checked ~ label .mark {
     border: 1px solid #0263f7; }
     .input-wrapper .checklist-inline input:checked ~ label .mark span {
@@ -497,6 +495,9 @@
   cursor: pointer; }
   .input-wrapper .select-field option {
     outline: 0; }
+
+.cart-mark {
+  display: -moz-inline-box !important; }
 
 .custom-select {
   position: relative;
